# picplusplusWebVersion

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  TODO.md  Untitled Diagram.drawio  conanfile.py  conanfile.txt  hyperfineParticlePlotting.ipynb  hyperfinePlottingTimestep.ipynb  linux_clang_release  linux_gcc_debug  requirements.txt  run_hyperfine.sh  start.sh  win_debug
.github/workflows/: cmake-single-platform.yml  picplusplus_cicd.yml  scaling_linux.yml  workflow.yaml
buildUtils/: linux_clang_debug  linux_gcc_release  mac_debug  mac_release  win_debug  win_release
djangodocker/: asgi.py  settings.py  urls.py  views.py  wsgi.py
docs/: building.md  known-issues.md  performance.md  validation.md
inputFiles/: coldPlasma.csv  coldPlasma.json  exampleInput.json  landau.json  landau.txt  testInput.json  testInput.txt  twoStream.txt
inputFiles/benchmarkFiles/particleDOE/: file2.json  file3.json  file4.json  file5.json
inputFiles/benchmarkFiles/scaling/: ci_smoke.json  large.json
inputFiles/benchmarkFiles/timestepDOE/: file1.json  file2.json  file3.json  file4.json  file5.json
inputFiles/demo/: coldPlasmaQuick.json  driftingBeam.json  electronOscillation.json  highModeLandau.json  landauFull.json  landauQuick.json  manifest.json  strongTwoStream.json  twoStreamFull.json  twoStreamQuick.json  warmTwoStream.json
inputFiles/validation/: coldPlasmaWave.json  twoStreamInstability.json
lib/: CMakeLists.txt  complex.cpp  fft.cpp
lib/include/: .init.hpp.swp  Accel.hpp  DataStructs.h  Fields.hpp  First_EE.hpp  PICPlusPlus.h  PicPlusPlus.h  PicWindow.h  SetRho.hpp  Utils.hpp  Window.h  fft.hpp  init.h  init.hpp
lib/private_headers/: Accel.hpp  Fields.hpp  Flat2DVector.h  SetRho.hpp  Utils.hpp
lib/src/: PICPlusPlus.cpp  PicWindow.cpp  Window.cpp  fft.cpp  init.cpp
lib/test/: AccelTest.cpp  CMakeLists.txt  DataStructsTest.cpp  FieldsTest.cpp  UtilsTest.cpp
linux_docker/: ubuntu_latest.dockerfile
logger/: CMakeLists.txt
logger/include/: Logger.h
logger/src/: Logger.cpp
logger/test/: CMakeLists.txt  LoggerTest.cpp
picplusplusbaseimage/: Dockerfile
results/: scaling.json  scaling_linux.json
resultsMain/: file1_result.json  file2_result.json  file3_result.json  file4_result.json  file5_result.json
scripts/: build.sh  plot_cold_plasma.py  plot_improvements_summary.py  plot_landau_damping.py  plot_scaling.py  plot_two_stream_validation.py  requirements.txt  run_linux_scaling.sh  scaling_benchmark.sh  test_django_config.py  verify_openmp.sh
src/: main.cpp
templates/: index.html
test/: CMakeLists.txt  FieldsTest.cpp  PICTest.cpp  PICplusplusTest.cpp  ValidationTest.cpp
test/include/: PICTest.hpp
