# cmake_minimum_required(VERSION 3.12)

# project(PICplusplusTest)

# enable_testing()

# add_executable(${PROJECT_NAME}
    # PICplusplusTest.cpp
    # include/PICTest.hpp
# )

# target_include_directories(${PROJECT_NAME} PUBLIC
    # ${CONAN_INCLUDE_DIRS}
# )

# # link_directories(C:/Users/vande/.conan/data/gtest/1.13.0/_/_/package/10f3c0a3a24a1055f3670e6694da4a93d078e663/lib)

# target_link_libraries(${PROJECT_NAME}
    # PRIVATE
    # ${CONAN_LIBS}
    # PIC++Lib
    # gtest
# )

# include(GoogleTest)
# gtest_discover_tests(${PROJECT_NAME})
